refactor: token and chat persistence ports
Rename the refresh token port and adapter to clarify that they are
  persistence-only abstractions, not token issuers.

  Remove unused chat message expiration support and the EXPIRED processing
  status, since there is no current recovery worker or caller for that path.

  Persist chat citations through a batch persistence port method backed by
  saveAll instead of saving each citation individually from the application
  service.

  Clean up unused payment persistence/catalog methods and rely on unique
  webhook event persistence to detect duplicate webhook processing.

  Preserve chat session activity timestamp updates through an explicit
  recordActivity domain method.